methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:1: error: not found: value dogHouse
dogHouse() {
^MethodsDogHouse:4: error: not found: value forwward
for (stepper <- 1 to 14) { forwward()}} 
                           ^MethodsDogHouse:10: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:16: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:26: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:36: error: not found: value dogHouse
		dogHouse();		
                ^